macros/tests/trybuild/trait.rs
use serde_args_macros::help;

#[help]
trait Foo {}

fn main() {}
